# embedded_rust

./: .gitignore  README.md
arms-demo/: Cargo.toml
arms-demo/src/: main.rs
borrow-demo/src/: main.rs
borrowing-demo/: Cargo.toml
borrowing-demo/src/: main.rs
builder-demo/: Cargo.toml
builder-demo/src/: main.rs
mut-safety/: Cargo.toml
mut-safety/src/: main.rs
nrf_blinky/: Cargo.toml
nrf_blinky/src/: main.rs
ownership-demo/src/: main.rs
ownership-method/: Cargo.toml
ownership-method/src/: main.rs
rtic-hello/: Cargo.toml
sinamics-v20-controller/src/: lib.rs  main.rs  modbus.rs
sinamics-v20-controller/tests/: modbus_tests.rs
zero-alloc-machine/: Cargo.toml
zero-alloc-machine/src/: main.rs
