[package]
name = "rtic-hello"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"

rtic = { version = "2.0", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1.0", features = ["cortex-m-systick"] }
rtic-sync = "1.0"

[build]
target = "thumbv7em-none-eabihf"